--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -223,5 +223,7 @@
 	"LOADING_ROBOT": "Loading robot...",
 	"PROGRAM_STORED": "Program stored on robot {robot}",
 	"PROGRAM_STORED_DESCRIPTION": "This program was stored when you previously used this robot",
-	"CONNECT_TO_RESTORE": "Connect to restore from robot"
+	"CONNECT_TO_RESTORE": "Connect to restore from robot",
+	"BLUETOOTH_CONTROL": "Remote control",
+	"BLUETOOTH_CONTROL_DESCRIPTION": "Use your keyboard to control your robot"
 }
