feat: Reworked flashing UI

--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -215,18 +215,22 @@
 	"ML_NO_CLASSES_DESCRIPTION": "Je hebt nog niet genoeg classes gemaakt, maak ten minste 2 classes om door te gaan",
 	"ML_NO_SENSORS_TITLE": "Geen sensoren toegevoegd",
 	"ML_NO_SENSORS_DESCRIPTION": "Je hebt nog geen sensoren toegevoegd, voeg ten minste 1 sensor toe om door te gaan",
+	"FIRMWARE_WINDOW_TITLE": "Firmware flashen",
 	"FIRMWARE_ERROR_DEFAULT": "Een onbekende fout is opgetreden!",
 	"FIRMWARE_NO_CONNECTION": "Je moet een bord aangesloten hebben aan je computer, en je moet de verbinding starten.",
-	"FIRMWARE_NO_USB_CONNECTION": "Om het flashen te beginnen moet het bord via de USB poort benaderbaar zijn. Probeer het alstublieft nogmaals, en selecteer het bord in de pop-up.",
 	"FIRMWARE_CANCEL_BUTTON": "Je hebt het flashen geannuleerd. Sluit dit venster wanneer je wilt.",
+	"FIRMWARE_DOWNLOAD_TITLE": "Firmware downloaden",
+	"FIRMWARE_DOWNLOAD_MESSAGE": "Het image-bestand voor de gekozen firmware wordt nu gedownload.",
 	"FIRMWARE_DOWNLOAD_FAILED_RESPONSE": "Het downloaden van de firmware is niet gelukt, omdat de doel-server niet reageerde met de verwachtte data.",
 	"FIRMWARE_DOWNLOAD_FAILED_OTHER": "Het downloaden van de firmware is niet gelukt, omdat de doel-server niet bereikt kon worden.",
+	"FIRMWARE_CANCELLED": "Door het venster te sluiten, is het flashen geannuleerd.",
 	"FIRMWARE_FLASHING_FAILED": "Er is een fout opgetreden bij het flashen.",
-	"FIRMWARE_WINDOW_TITLE": "Flash firmware",
+	"FIRMWARE_NO_USB_CONNECTION": "Om het flashen te beginnen moet het bord via de USB poort benaderbaar zijn. Probeer het alstublieft nogmaals, en selecteer het bord in de pop-up.",
+	"FIRMWARE_FLASH_TITLE": "Flash firmware",
+	"FIRMWARE_FLASH_MESSAGE": "De firmware wordt nu naar het bord geflashed.",
 	"FIRMWARE_SHOW_ALL_OPTIONS": "Laat alle ondersteunde firmware zien.",
+	"FIRMWARE_CONFIRM_TITLE": "Bevestiging nodig",
 	"FIRMWARE_FINAL_WARNING": "Je staat op het punt de firmware op je bord te installeren.\nWeet je zeker dat je het juiste bord en firmware hebt gekozen?",
-	"FIRMWARE_BUTTON_CONFIRM": "Ja, ik weet het zeker",
-	"FIRMWARE_BUTTON_CANCEL": "Nee, annuleer de bewerking",
 	"FIRMWARE_STATE_DOWNLOADING": "Downloaden...",
 	"FIRMWARE_STATE_FLASHING": "Bord flashen...",
 	"FIRMWARE_STATE_DONE": "Het flashen is succesvol voltooid!",
