fix: check if Bluetooth is enabled in browser

--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -225,5 +225,7 @@
 	"PROGRAM_STORED_DESCRIPTION": "Dit programma is opgeslagen toen je je de robot de vorige keer gebruikte",
 	"CONNECT_TO_RESTORE": "Verbind om van robot terug te zetten",
 	"BLUETOOTH_CONTROL": "Afstandsbesturing",
-	"BLUETOOTH_CONTROL_DESCRIPTION": "Gebruik je toetsenbord om je robot op afstand aan te sturen"
+	"BLUETOOTH_CONTROL_DESCRIPTION": "Gebruik je toetsenbord om je robot op afstand aan te sturen",
+	"NO_BLUETOOTH_TITLE": "Bluetooth niet gevonden",
+	"NO_BLUETOOTH_MESSAGE": "Bluetooth niet gevonden, check of je een Chromium gebaseerde browser gebruikt, op Linux moet je eerst chrome://flags/#enable-web-bluetooth aanzetten"
 }
