chore: add translations

--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -227,5 +227,35 @@
 	"BLUETOOTH_CONTROL": "Remote control",
 	"BLUETOOTH_CONTROL_DESCRIPTION": "Use your keyboard to control your robot",
 	"NO_BLUETOOTH_TITLE": "Bluetooth not found",
-	"NO_BLUETOOTH_MESSAGE": "Bluetooth not found, please check if you're using a Chromium based browser, on Linux please enable chrome://flags/#enable-web-bluetooth"
+	"NO_BLUETOOTH_MESSAGE": "Bluetooth not found, please check if you're using a Chromium based browser, on Linux please enable chrome://flags/#enable-web-bluetooth",
+	"BACK": "Back",
+	"ADD_EXTENSION": "Add extension",
+	"REMOVE_EXTENSION": "Remove extension",
+	"EXTENSIONS_CONNECT_TITLE": "Connect your robot",
+	"EXTENSIONS_CONNECT_DESC": "Please connect your robot to your computer to find the available extensions",
+	"LISTS_CATEGORY": "Lists",
+	"LISTS_CATEGORY_DESCRIPTION": "Store multiple similar objects into a list of data",
+	"OPERATORS_CATEGORY": "Operators",
+	"OPERATORS_CATEGORY_DESCRIPTION": "Add blocks for handling both strings and numbers",
+	"ML_CATEGORY": "Machine learning",
+	"ML_CATEGORY_DESCRIPTION": "Train your own Machine Learning model for classification",
+	"MESH_CATEGORY": "Mesh",
+	"MESH_CATEGORY_DESCRIPTION": "Connect a network of robots together and make them communicate",
+	"BLE_CATEGORY": "Bluetooth",
+	"BLE_CATEGORY_DESCRIPTION": "Control your robot using your keyboard remotely",
+	
+	"IO_SECTION": "I/O",
+	"DISTANCE_MOTION_SECTION": "Distance & Motion",
+	"ENVIRONMENTAL_SECTION": "Environmental",
+	"COLOR_LIGHT_SECTION": "Color & Light",
+	"TIME_SECTION": "Time",
+	"COMMUNICATION_SECTION": "Communication",
+	"OUTPUT_SECTION": "Output",
+	"LED_STRIP_SECTION": "Led strip",
+	"STANDARD_DISPLAY_SECTION": "Standard display",
+	"LARGE_DISPLAY_SECTION": "Large display",
+	"MATRIX_DISPLAY_SECTION": "Matrix display",
+	"SEGMENT_DISPLAY_SECTION": "Segment display",
+	"AUDIO_SECTION": "Audio",
+	"COMMUNICATION_STORAGE_SECTION": "Communication & Storage"
 }
