--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -14,7 +14,7 @@
 	"PROJECT": "My projects",
 	"HELP": "Tips",
 	"HELP_FORUM": "Leaphy Discord (Help forum)",
-	"DOWNLOAD_DRIVERS": "Download drivers",
+	"DOWNLOAD_DRIVERS": "Download Windows drivers",
 	"MORE": "More...",
 	"MORE_ABOUT": "About Easybloqs",
 	"UPLOAD": "Upload to robot",
