--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -14,7 +14,7 @@
 	"PROJECT": "Mijn projecten",
 	"HELP": "Tips",
 	"HELP_FORUM": "Leaphy Discord (Help Forum)",
-	"DOWNLOAD_DRIVERS": "Download drivers",
+	"DOWNLOAD_DRIVERS": "Download Windows drivers",
 	"MORE": "Meer...",
 	"MORE_ABOUT": "Over Easybloqs",
 	"UPLOAD": "Upload naar robot",
