--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -158,6 +158,8 @@
 	"TEST_MODE_SELECT": "Please select an assignment below",
 	"NO_PARTICIPANTS": "No users found, please ask your administrator to create them",
 	"TUTORIALS": "Tutorials",
+	"TUTORIALS_DESCRIPTION": "Learn how to program and assemble your robot.",
+	"SEE_ALL": "See all",
 	"CONFIRMSUBMIT_TITLE": "Are you sure?",
 	"CONFIRMSUBMIT_MESSAGE": "You won't be able to edit your work later",
 	"SUBMIT": "Submit",
@@ -218,6 +220,8 @@
 	"PREVIOUS": "Previous",
 	"NEXT": "Next",
 	"CIRCUIT": "Circuit",
+	"CIRCUIT_DESCRIPTION": "This circuit is based on the blocks used in your program.",
+	"HELP_TOOLS": "Help tools",
 	"NO_PROGRAM": "No program",
 	"NO_PROGRAM_MESSAGE": "We couldn't find any code on your robot",
 	"LOADING_ROBOT": "Loading robot...",
@@ -263,6 +267,8 @@
 
 	"STILL_STUCK": "Still stuck?",
 	"SOLVER": "Help robot",
+	"SOLVER_DESCRIPTION": "Are you stuck? Ask our AI assistant for help in finding the solution to your problem.",
+	"ASK": "Ask",
 	"OTHER_ANSWER": "Something else...",
 	"SUBMIT_OTHER_ANSWER": "Submit",
 	"THINKING": "Thinking..."
