chore: improve translation clarity
Co-authored-by: Ronald Moesbergen <rmoesbergen@users.noreply.github.com>

--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -159,7 +159,7 @@
 	"NO_PARTICIPANTS": "No users found, please ask your administrator to create them",
 	"TUTORIALS": "Tutorials",
 	"TUTORIALS_DESCRIPTION": "Learn how to program and assemble your robot.",
-	"SEE_ALL": "See all",
+	"SEE_ALL": "See all video's",
 	"CONFIRMSUBMIT_TITLE": "Are you sure?",
 	"CONFIRMSUBMIT_MESSAGE": "You won't be able to edit your work later",
 	"SUBMIT": "Submit",
