chore: improve translation clarity
Co-authored-by: Ronald Moesbergen <rmoesbergen@users.noreply.github.com>

--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -159,7 +159,7 @@
 	"NO_PARTICIPANTS": "Geen deelnemers, vraag je docent om deze aan te maken",
 	"TUTORIALS": "Tutorials",
 	"TUTORIALS_DESCRIPTION": "Leer hoe je je robot kunt programmeren en bouwen.",
-	"SEE_ALL": "Zie alles",
+	"SEE_ALL": "Bekijk alle video's",
 	"CONFIRMSUBMIT_TITLE": "Weet je het zeker?",
 	"CONFIRMSUBMIT_MESSAGE": "Hierna kan je deze opdracht niet opnieuw inleveren",
 	"SUBMIT": "Inleveren",
