feat: use custom feedback endpoint

--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -20,6 +20,11 @@
 	"UPLOAD": "Upload to robot",
 	"SEND": "Send",
 	"NAME": "Your name...",
+	"MESSAGE": "Your message...",
+	"ATTACHMENTS": "Attachments",
+	"UPLOAD_LOGS": "Upload logs",
+	"WORKSPACE": "Workspace",
+	"FEEDBACK_INFO": "We will also collect information about your browser, your operating system and your robot.",
 	"DRIVERINSTALLATIONINSTRUCTIONS_TITLE": "We are almost ready!",
 	"DRIVERINSTALLATIONINSTRUCTIONS": "You will get two popups to install the USB driver. Click 'Yes' and then 'Install'.",
 	"CONNECTIONINSTRUCTIONS_TITLE": "Robot not found",
@@ -100,6 +105,7 @@
 	"EMAIL": "Email",
 	"FEEDBACK": "Suggestion / Feedback",
 	"FEEDBACK_SENT": "Your feedback has been sent, thank you!",
+	"FEEDBACK_INTRODUCTION": "Send feedback to the Leaphy team to help us improve Leaphy Easybloqs.",
 	"FLASH_FIRMWARE": "Flash firmware",
 	"FLASHING": "Flashing firmware...",
 	"FLASHED": "Firmware flashed",
