--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -20,6 +20,11 @@
 	"UPLOAD": "Upload naar robot",
 	"SEND": "Versturen",
 	"NAME": "Je naam...",
+	"MESSAGE": "Je bericht...",
+	"ATTACHMENTS": "Bijlagen",
+	"UPLOAD_LOGS": "Upload logs",
+	"WORKSPACE": "Project",
+	"FEEDBACK_INFO": "We zullen ook informatie over je browser, je besturingssysteem en je robot verzamelen.",
 	"DRIVERINSTALLATIONINSTRUCTIONS_TITLE": "We zijn bijna klaar!",
 	"DRIVERINSTALLATIONINSTRUCTIONS": "Je krijgt nu nog twee popups om de USB driver te installeren. Klik op 'Yes' en dan op 'Install'.",
 	"CONNECTIONINSTRUCTIONS_TITLE": "Robot niet gevonden",
@@ -100,6 +105,7 @@
 	"EMAIL": "E-mail",
 	"FEEDBACK": "Suggestie / Feedback",
 	"FEEDBACK_SENT": "Uw feedback is verstuurd, bedankt!",
+	"FEEDBACK_INTRODUCTION": "Stuur feedback naar het Leaphy team om ons te helpen Leaphy Easybloqs te verbeteren.",
 	"FLASH_FIRMWARE": "Firmware flashen",
 	"FLASHING": "Flashing de firmware...",
 	"FLASHED": "Firmware succesvol geflashed",
