--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -265,5 +265,13 @@
 	"SOLVER": "Help robot",
 	"OTHER_ANSWER": "Something else...",
 	"SUBMIT_OTHER_ANSWER": "Submit",
-	"THINKING": "Thinking..."
+	"THINKING": "Thinking...",
+
+	"ESP_PROGRAMMER": "ESP Recovery assistant",
+	"ESP_PROGRAMMER_RESET_TWICE": "Prepare your board",
+	"ESP_PROGRAMMER_RESET_TWICE_DESCRIPTION": "Press the reset button twice in quick succession to prepare your board for recovery, after that press the connect button",
+	"ESP_PROGRAMMER_FLASHING": "Flashing...",
+	"ESP_PROGRAMMER_FLASHING_DESCRIPTION": "Flashing the board...",
+	"ESP_PROGRAMMER_RESET": "Almost there!",
+	"ESP_PROGRAMMER_RESET_DESCRIPTION": "Press the reset button to complete the process"
 }
