fix: implement sensor translations

--- a/packages/client/src/assets/translations/nl.json
+++ b/packages/client/src/assets/translations/nl.json
@@ -295,5 +295,19 @@
 	"ARROWDOWN": "Pijltje omlaag",
 	"ARROWLEFT": "Pijltje links",
 	"ARROWRIGHT": "Pijltje rechts",
-	"SPACE": "Spatie"
+	"SPACE": "Spatie",
+
+	"TIME_OF_FLIGHT_SENSOR": "Time of Flight sensor",
+	"TIME_OF_FLIGHT_SENSOR_CHANNEL": "Time of Flight sensor (I2C kanaal: {channel})",
+	"DIGITAL_PIN": "Digitale pin {pin}",
+	"DIGITAL_PIN_NAME": "Digitale pin",
+	"ANALOG_PIN": "Analoge pin {pin}",
+	"ANALOG_PIN_NAME": "Analoge pin",
+	"ULTRASONIC_SENSOR": "Afstand sensor (trig: {trig}, echo: {echo})",
+	"ULTRASONIC_SENSOR_NAME": "Afstand sensor",
+	"LIDAR_SENSOR": "Lidar sensor",
+	"LIDAR_SENSOR_CHANNEL": "Lidar sensor (I2C kanaal: {channel})",
+	"I2C_CHANNEL": "I2C kanaal",
+	"I2C_CHANNEL_DESCRIPTION": "Selecteer een I2C kanaal",
+	"NONE": "Geen"
 }
