--- a/packages/client/src/assets/translations/en.json
+++ b/packages/client/src/assets/translations/en.json
@@ -295,5 +295,19 @@
 	"ARROWDOWN": "Arrow down",
 	"ARROWLEFT": "Arrow left",
 	"ARROWRIGHT": "Arrow right",
-	"SPACE": "Space"
+	"SPACE": "Space",
+
+	"TIME_OF_FLIGHT_SENSOR": "Time of Flight sensor",
+	"TIME_OF_FLIGHT_SENSOR_CHANNEL": "Time of Flight sensor (I2C channel: {channel})",
+	"DIGITAL_PIN": "Digital Pin {pin}",
+	"DIGITAL_PIN_NAME": "Digital Pin",
+	"ANALOG_PIN": "Analog Pin {pin}",
+	"ANALOG_PIN_NAME": "Analog Pin",
+	"ULTRASONIC_SENSOR": "Distance sensor (trig: {trig}, echo: {echo})",
+	"ULTRASONIC_SENSOR_NAME": "Distance sensor",
+	"LIDAR_SENSOR": "Lidar sensor",
+	"LIDAR_SENSOR_CHANNEL": "Lidar sensor (I2C channel: {channel})",
+	"I2C_CHANNEL": "I2C channel",
+	"I2C_CHANNEL_DESCRIPTION": "Select an I2C channel",
+	"NONE": "None"
 }
